fixed url for issues creation

--- a/src/main/resources/configurations/thirdparties.yml
+++ b/src/main/resources/configurations/thirdparties.yml
@@ -7,7 +7,7 @@ spring:
 
 application:
     config:
-        issues-url: http://localhost:8222/issues
+        issues-url: http://localhost:8222/issues/external-sources
 
 management:
     tracing:
