added implementation for security and tprm micrroservices

--- a/src/main/resources/configurations/gateway.yml
+++ b/src/main/resources/configurations/gateway.yml
@@ -16,6 +16,10 @@ spring:
                   uri: http://localhost:8090
                   predicates:
                       - Path=/api/v1/students/**
+                - id: security
+                  uri: http://localhost:8061
+                  predicates:
+                      - Path=/api/v1/auth/**
                 - id: schools
                   uri: http://localhost:8070
                   predicates:
