--- a/src/main/resources/configurations/thirdparties.yml
+++ b/src/main/resources/configurations/thirdparties.yml
@@ -8,6 +8,7 @@ spring:
 application:
     config:
         issues-url: http://localhost:8222/issues/external-sources
+        authorization-url: http://localhost:8222/api/v1/auth
 
 management:
     tracing:
